[package]
name = "my_test"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41.1", features = ["full"] }
actix-web = "4.9.0"
rusqlite = "0.32.1"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
log = "0.4.22"
rand = "0.8.5"
dotenv = "0.15.0"
lazy_static = "1.5.0"
sha2 = "0.10.8"
reqwest = { version = "0.12.9", features = ["json"] }
chrono = "0.4.38"
